; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/net/extr_net_http.c_net_http_error.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/net/extr_net_http.c_net_http_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.http_t = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @net_http_error(%struct.http_t* %0) #0 {
  %2 = alloca %struct.http_t*, align 8
  store %struct.http_t* %0, %struct.http_t** %2, align 8
  %3 = load %struct.http_t*, %struct.http_t** %2, align 8
  %4 = getelementptr inbounds %struct.http_t, %struct.http_t* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %17, label %7

7:                                                ; preds = %1
  %8 = load %struct.http_t*, %struct.http_t** %2, align 8
  %9 = getelementptr inbounds %struct.http_t, %struct.http_t* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp slt i32 %10, 200
  br i1 %11, label %17, label %12

12:                                               ; preds = %7
  %13 = load %struct.http_t*, %struct.http_t** %2, align 8
  %14 = getelementptr inbounds %struct.http_t, %struct.http_t* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = icmp sgt i32 %15, 299
  br label %17

17:                                               ; preds = %12, %7, %1
  %18 = phi i1 [ true, %7 ], [ true, %1 ], [ %16, %12 ]
  %19 = zext i1 %18 to i32
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
